fixed my html page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<div class="name-tag">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Name Tag</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="name-tag">
   <header class="name-tag-title">
     <h1>Hello</h1>
     <h2>My name is</h2>
@@ -13,3 +21,8 @@
 <form action="">
   <input type="text" id="name">
 </form>
+  
+  <script src="script.js"></script>
+</body>
+</html>
+
